fraud-service/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fraud-ms-vs
  namespace: banking
spec:
  hosts:
    - fraud-service.banking.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /api/v1/fraud/score
      timeout: 3s              # hard 3s timeout on score endpoint
      retries:
        attempts: 1            # 1 retry only on gateway errors
        retryOn: gateway-error,reset
        perTryTimeout: 1.5s
      route:
        - destination:
            host: fraud-service.banking.svc.cluster.local
            port:
              number: 8094
    - route:                   # alert management endpoints
        - destination:
            host: fraud-service.banking.svc.cluster.local
            port:
              number: 8094
      timeout: 10s
